@@ -33,6 +33,7 @@ case "${1}" in
         mount -f / || failed=1
         mount -f /proc || failed=1
         mount -f /sys || failed=1
+        mount -f /run || failed=1
         (exit ${failed})
         evaluate_retval standard
 
@@ -40,6 +41,7 @@ case "${1}" in
         # their option list.  _netdev denotes a network filesystem.
         message="Mounting remaining file systems..."
         mount -a -O no_netdev >/dev/null
+        ln -s /run/shm /dev/shm
         evaluate_retval standard
         ;;
 
