@@ -13,7 +13,7 @@
   <para>It is time to create some structure in the LFS file system. Create a
   standard directory tree by issuing the following commands:</para>
 
-<screen><userinput>mkdir -pv /{bin,boot,etc/opt,home,lib,mnt,opt}
+<screen><userinput>mkdir -pv /{bin,boot,etc/opt,home,lib,mnt,opt,run}
 mkdir -pv /{media/{floppy,cdrom},sbin,srv,var}
 install -dv -m 0750 /root
 install -dv -m 1777 /tmp /var/tmp
@@ -27,7 +27,9 @@ done
 case $(uname -m) in
  x86_64) ln -sv lib /lib64 &amp;&amp; ln -sv lib /usr/lib64 ;;
 esac
-mkdir -v /var/{lock,log,mail,run,spool}
+mkdir -v /var/{log,mail,spool}
+ln -sv /run /var/run
+ln -sv /run/lock /var/lock
 mkdir -pv /var/{opt,cache,lib/{misc,locate},local}</userinput></screen>
 
   <para>Directories are, by default, created with permission mode 755, but
